--- a/public/app/views/pages/myStats.html
+++ b/public/app/views/pages/myStats.html
@@ -11,7 +11,7 @@
 	<canvas id="internalStatus" ></canvas>
 </div>
 <div class="col-lg-6 chart-style" >
-	<label><h3>Mantis Status</h3></label>
+	<label><h3>External Status</h3></label>
 	<button ng-click="myStats.myStatsByMantisStatusForChart('doughnut');" class="chart-btn">P</button>
 	<button ng-click="myStats.myStatsByMantisStatusForChart('bar');" class="chart-btn">B</button>
 	<button ng-click="myStats.myStatsByMantisStatusForChart('line');" class="chart-btn">L</button>
@@ -51,7 +51,7 @@
 	<canvas id="internalCategoryOnlyOpen" ></canvas>
 </div>
 <div class="col-lg-6 chart-style" >
-	<label><h3>Mantis Category</h3><h6>(Overall)</h6></label>
+	<label><h3>External Category</h3><h6>(Overall)</h6></label>
 	<button ng-click="myStats.myStatsByMantisCategoryForChart('pie');" class="chart-btn">P</button>
 	<button ng-click="myStats.myStatsByMantisCategoryForChart('horizontalBar');" class="chart-btn">B</button>
 	<button ng-click="myStats.myStatsByMantisCategoryForChart('line');" class="chart-btn">L</button>
@@ -59,7 +59,7 @@
 	<canvas id="mantisCategory" ></canvas>
 </div>
 <div class="col-lg-6 chart-style" >
-	<label><h3>Mantis Category</h3><h6>(Excluding Closed Tickets)</h6></label>
+	<label><h3>External Category</h3><h6>(Excluding Closed Tickets)</h6></label>
 	<button ng-click="myStats.myStatsByMantisCategoryForChartOnlyOpen('pie');" class="chart-btn">P</button>
 	<button ng-click="myStats.myStatsByMantisCategoryForChartOnlyOpen('horizontalBar');" class="chart-btn">B</button>
 	<button ng-click="myStats.myStatsByMantisCategoryForChartOnlyOpen('line');" class="chart-btn">L</button>
