--- a/public/app/views/pages/management/allTickets.html
+++ b/public/app/views/pages/management/allTickets.html
@@ -200,26 +200,19 @@
         </div>
      </div>
 
-    
-
-        
-
-        
-        
+ 
         <div class="row">
             <div class="col-sm-12 table_padding">
         <table class="table table-striped table-bordered" datatable="ng" dt-options="vm.dtOptions"  id="allTicketsTable" dt-instance="vm.dtInstance"  width="100%" dt-column-defs="vm.dtColumnDefs">
-
                 <thead>
                 <tr>
-                    <th colspan="1">Mantis IssueID</th>
-                    <th class="text-center" colspan="3">Mantis</th>
+                    <th class="text-center" colspan="4">External</th>
                     <th class="text-center" colspan="3">Internal</th>
-                    <th colspan="4"></th>
+                    <th class="text-center" colspan="4">General</th>
                 </tr>
                 <tr>
                     <!--<th></th>-->
-                    <th ng-click="sort('mantisIssueID')">Mantis IssueID
+                    <th ng-click="sort('mantisIssueID')">Ticket ID
                             <span class="glyphicon sort-icon" ng-show="sortKey=='mantisIssueID'" ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
                     </th>
                     <th ng-click="sort('mantisStatus')">Status
@@ -246,7 +239,7 @@
                     <th ng-click="sort('module')">Module
                         <span class="glyphicon sort-icon" ng-show="sortKey=='module'" ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
                     </th>
-                    <th ng-click="sort('assingedTo')">Name / Assingned To
+                    <th ng-click="sort('assingedTo')">Assigned To
                                 <span class="glyphicon sort-icon" ng-show="sortKey=='assingedTo'" ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
                         </th>
                     <th ng-show="main.isLoggedIn && main.authorized">Action</th>
@@ -277,7 +270,7 @@
                                                                 <i class="glyphicon glyphicon-envelope"></i>
                                                         </button>
                                                 </a>
-                                                <button  type="button" ng-click="showCommentDisplay(ticket.mantisIssueID)" class="btn btn-default pull-left btn"><md-tooltip md-direction="bottom">Comment Histrory</md-tooltip><i class="glyphicon glyphicon-comment"></i></button>
+                                                <button  type="button" ng-click="showCommentDisplay(ticket.mantisIssueID)" class="btn btn-default pull-left btn"><md-tooltip md-direction="bottom">Comments</md-tooltip><i class="glyphicon glyphicon-comment"></i></button>
                                         </div>
                                 </td>
                 </tr>
